Disable dark mode until fixed, by ignoring preferred color scheme (#124)

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -127,7 +127,7 @@ a {
 .ql-display ol li.ql-indent-9:before {
   content: counter(list-9, decimal) '. ';
 }
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
@@ -135,4 +135,4 @@ a {
     color: white;
     background: black;
   }
-}
+} */
